# lec_h2o

./: .gitignore  .gitignore~  README.md
data_reconstruct/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  cmake_install.cmake  main.cpp  reconstructor_gs
dataset/: CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  README.md  _hira.txt  cmake_install.cmake  csv_writer  csv_writer.cpp  god.sh  hira.txt~  hira_label.cpp  hira_label.h  pre_glyphsplit.pl~  table_maker.pl  table_maker.pl~
dataset/code/: _hira.txt  _hira3.txt  hira.txt
result/: .~lock.result0716_[1024_1024_2048]_ep100.ods#  result0716.ods  result0716_[1024_1024_2048]_ep100.ods
